# solana-defi-indexer-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile.indexer  Dockerfile.init  Dockerfile.orca  Dockerfile.postgres  LICENSE  README.md  backfill-optimization-plan.md  docker-compose.yml
database/: README.md  dbutil.rs  dbutil.sh  dbutil_docker.sh  delete_schema.sql  init_database.sh  load_orca_pool.rs  load_orca_pools.sh  load_orca_pools_docker.sh  load_pools.rs  load_pools.sh  load_pools_docker.sh  schema.sql  setup_db.rs  setup_db.sh
database/config/: README.md  db_config.json
database/models/: mod.rs  orca.rs
database/schema/common/: delete.sql  schema.sql
database/schema/orca/: delete.sql  schema.sql  subscribed_pools.txt
database/schema/raydium/: schema.sql  subscribed_pools.txt
docs/: README.md  add-new-dex.md  architecture.md  cli-usage.md  database-schema.md  docker-setup.md  running.md  setup.md
src/: backfill_manager.rs  lib.rs  main.rs  websocket_manager.rs
src/db/: common.rs  mod.rs  pool.rs  signature_store.rs
src/db/repositories/: mod.rs  orca.rs  orca_batch.rs  orca_pools.rs  raydium.rs  raydium_pools.rs
src/indexers/: dex_indexer.rs  mod.rs  orca.rs  raydium.rs
src/models/: common.rs  mod.rs
src/models/orca/: mod.rs  whirlpool.rs
src/models/raydium/: amm.rs  clmm.rs  mod.rs
src/utils/: logging.rs
tests/: event_parsing_test.rs  process_log_test.rs  whirlpool_models_test.rs
